fixed profile page align

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -247,3 +247,35 @@ body {
   font-size: x-large;
 }
 
+// Account
+// -------------------------
+.page-header {
+  color: white;
+  margin-left: 15px;
+}
+
+.profile .control-label {
+  color: white;
+  width: 160px;
+}
+
+.profile .form-horizontal {
+  margin-left: 25%
+}
+
+.profile .col-sm-4 {
+  width: 50%
+}
+
+.profile .form-horizontal .control-label {
+  text-align: left;
+}
+
+.profile .radio{
+  color: white;
+}
+
+.profile .form-group {
+  margin-left: 0;
+  margin-right: 0;
+}
